<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="4"
    android:background="@android:color/black"
    android:gravity="center"
    tools:context=".CardMenuActivity">

    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/accountDetailsCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView

                    android:padding="5dp"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/account_details"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@android:color/holo_orange_dark"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option1"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/checkBalanceCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView

                    android:padding="5dp"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/check_balance"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@android:color/holo_orange_dark"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option2"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>




    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/donateCashCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView

                    android:padding="5dp"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/donate_cash"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@android:color/holo_orange_dark"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option3"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/mobileRechargeCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView

                    android:padding="5dp"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/mobile_recharge"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@android:color/holo_orange_dark"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option4"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>




    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/addCardCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView

                    android:padding="5dp"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/add_card"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@android:color/holo_orange_dark"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option5"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/payBillsCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView

                    android:padding="5dp"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/pay_bills"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@android:color/holo_orange_dark"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option6"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>




    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:clipToPadding="false"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/cashOutCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView

                    android:padding="5dp"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/withdraw_cash"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@android:color/holo_orange_dark"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option7"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:layout_margin="5dp"
            android:id="@+id/transactionHistCardViewId"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView

                    android:layout_width="45dp"
                    android:layout_height="27dp"
                    android:padding="5dp"
                    android:src="@drawable/transaction_history" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@android:color/holo_orange_dark"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/option8"
                    android:textColor="@android:color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textAppearance="?android:textAppearanceLarge"
                    />


            </LinearLayout>


        </androidx.cardview.widget.CardView>




    </LinearLayout>



</LinearLayout>